5.1
 * Add JSON constraint (CASSANDRA-20273)
 * Prevent invalid constraint combinations (CASSANDRA-20330)
 * Support CREATE TABLE LIKE WITH INDEXES (CASSANDRA-19965)
 * Invalidate relevant prepared statements on every change to TableMetadata (CASSANDRA-20318)
 * Add per type max size guardrails (CASSANDRA-19677)
 * Make it possible to abort all kinds of multi step operations (CASSANDRA-20217)
 * Do not leak non-Java exceptions when calling snapshot operations via JMX (CASSANDRA-20335)
 * Implement NOT_NULL constraint (CASSANDRA-20276)
 * Improve error messages for constraints (CASSANDRA-20266)
 * Add system_views.partition_key_statistics for querying SSTable metadata (CASSANDRA-20161)
 * CEP-42 - Add Constraints Framework (CASSANDRA-19947)
 * Add table metric PurgeableTombstoneScannedHistogram and a tracing event for scanned purgeable tombstones (CASSANDRA-20132)
 * Make sure we can parse the expanded CQL before writing it to the log or sending it to replicas (CASSANDRA-20218)
 * Add format_bytes and format_time functions (CASSANDRA-19546)
 * Fix error when trying to assign a tuple to target type not being a tuple (CASSANDRA-20237)
 * Fail CREATE TABLE LIKE statement if UDTs in target keyspace do not exist or they have different structure from ones in source keyspace (CASSANDRA-19966)
 * Support octet_length and length functions (CASSANDRA-20102)
 * Make JsonUtils serialize Instant always with the same format (CASSANDRA-20209)
 * Port Harry v2 to trunk (CASSANDRA-20200)
 * Enable filtering of snapshots on keyspace, table and snapshot name in nodetool listsnapshots (CASSANDRA-20151)
 * Create manifest upon loading where it does not exist or enrich it (CASSANDRA-20150)
 * Propagate true size of snapshot in SnapshotDetailsTabularData to not call JMX twice in nodetool listsnapshots (CASSANDRA-20149)
 * Implementation of CEP-43 - copying a table via CQL by CREATE TABLE LIKE (CASSANDRA-19964)